test/tests/compiler/9_functions/valid/no_arguments/multiple_declarations.plx
pub fn main(none) i32 {
    fn f(none) i32;
    fn f(none) i32;
    return f()
}

pub fn f(none) i32 {
    return 3
}
