test/tests/compiler/9_functions/invalid_parse/plx1_param_is_function.plx
pub fn foo(fn f(none) i32) i32 {
    return 1
}

pub fn main(none) i32 {
    return 0
}
